# command-model

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: voice_system_complete.py
src/command_recognition/: __init__.py  config.py  gradio_app.py  main.py
src/command_recognition/audio/: audio_generator.py  audio_processor.py  extract_features.py
src/command_recognition/models/: cnn.py  lstm.py
src/command_recognition/utils/: enums.py
