[project]
name = "command-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MrSpokeMan", email = "82821630+MrSpokeMan@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pydantic-settings>=2.11.0",
    "scipy>=1.13.1",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]

[project.scripts]
command-recognition = "command_recognition:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
