[project]
name = "command-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MrSpokeMan", email = "82821630+MrSpokeMan@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pydantic-settings>=2.11.0",
    "pydub>=0.25.1",
    "scipy>=1.13.1",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "gradio>=4.0.0",
    "sounddevice>=0.4.6",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.scripts]
command-recognition = "command_recognition:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
